tests/ui/const-generics/adt_const_params/non_valtreeable_const_arg-2.stderr
error[E0425]: cannot find function `bar` in this scope
  --> $DIR/non_valtreeable_const_arg-2.rs:11:16
   |
LL | impl Wrapper<{ bar() }> {
   |                ^^^ not found in this scope
   |
help: you might be missing a const parameter
   |
LL | impl<const bar: /* Type */> Wrapper<{ bar() }> {
   |     +++++++++++++++++++++++

error[E0741]: using function pointers as const generic parameters is forbidden
  --> $DIR/non_valtreeable_const_arg-2.rs:8:25
   |
LL | struct Wrapper<const F: fn()>;
   |                         ^^^^

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0425, E0741.
For more information about an error, try `rustc --explain E0425`.
